fix badge z-index error

--- a/2017/stylesheets/all.css
+++ b/2017/stylesheets/all.css
@@ -7511,7 +7511,8 @@ section {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 20px; }
+    padding-top: 20px;
+    z-index: 10; }
     .badgeContainer .func .collection {
       color: #fff;
       font-size: 13px;
