--- a/source_17/stylesheets/layout/page/_badge.scss
+++ b/source_17/stylesheets/layout/page/_badge.scss
@@ -57,6 +57,7 @@ $content_width: 300px;
         align-items: center;
         justify-content: center;
         padding-top: 20px;
+        z-index: 10;
         .collection {
             color: #fff;
             font-size: 13px;
